@@ -1,19 +1,29 @@
 package com.example.mediplan.security;
 
-import jakarta.servlet.http.*;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler;
 import org.springframework.stereotype.Component;
 
 @Component
 public class OAuth2LoginFailureHandler extends SimpleUrlAuthenticationFailureHandler {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(OAuth2LoginFailureHandler.class);
+
     @Override
-    public void onAuthenticationFailure(HttpServletRequest req, HttpServletResponse res,
-                                        AuthenticationException ex) {
-        ex.printStackTrace(); // shows up in Heroku logs
-        try {
-            String msg = java.net.URLEncoder.encode(ex.getMessage(), "UTF-8");
-            getRedirectStrategy().sendRedirect(req, res, "/login?oauth2_error=" + msg);
-        } catch (Exception ignored) {}
+    public void onAuthenticationFailure(HttpServletRequest request,
+                                        HttpServletResponse response,
+                                        AuthenticationException exception) throws IOException {
+        LOGGER.warn("Échec d'authentification OAuth2 : {}", exception.getMessage());
+        String message = exception.getMessage() == null ? "Erreur inconnue" : exception.getMessage();
+        String targetUrl = "/login?oauth2_error=" + URLEncoder.encode(message, StandardCharsets.UTF_8);
+        getRedirectStrategy().sendRedirect(request, response, targetUrl);
     }
 }
